# selenium-twitter-scraper

./: pyproject.toml
scraper/: __main__.py
