[tool.poetry]
name = "selenium_twitter_scraper"
version = "0.1.0"
description = ""
authors = ["nmduc <ducminhnguyen9988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fake-headers = ">=1.0.2"
pandas = ">=2.0.3"
python-dotenv = ">=1.0.0"
selenium = ">=4.12.0"
webdriver-manager = ">=4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
